--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@capacitor/core": "^4.7.0",
     "@capacitor/ios": "^4.7.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-qr-code": "^2.0.15"
   },
   "devDependencies": {
     "@capacitor/cli": "^4.7.0",
